--- a/main.css
+++ b/main.css
@@ -16,6 +16,9 @@ header > a {
   background-image: url(image/h-apple-logo.png);
   background-size: cover;
 }
+.header > a:hover {
+  color: #000000;
+}
 nav {
   display: flex;
   align-items: center;
@@ -421,7 +424,7 @@ header > button + button + button {
 /* movie scroll redo */
 .a-movies-container {
   width: 100%;
-  overflow: scroll;
+  overflow-x: scroll;
 }
 .a-movies {
   display: flex;
@@ -433,9 +436,16 @@ header > button + button + button {
   width: 1250px;
   height: 668px;
   background-color: rgb(171, 226, 176);
-  margin-bottom: 32px;
   position: relative;
   box-sizing: border-box;
+}
+/* indesktopver left only5movies */
+.mov6,
+.mov7,
+.mov8,
+.mov9,
+.mov10 {
+  display: none;
 }
 .a-movie__img {
   position: absolute;
@@ -466,6 +476,9 @@ header > button + button + button {
   border: none;
   background-color: rgba(245, 245, 247, 1);
 }
+.a-movie__text button:hover {
+  background-color: rgb(255, 255, 255);
+}
 .a-movie__text .genre {
   font-size: 17px;
   line-height: 20px;
@@ -477,19 +490,35 @@ header > button + button + button {
 .a-movie__text span {
   font-weight: 700;
 }
-/* indesktopver left only5movies */
-.mov6,
-.mov7,
-.mov8,
-.mov9,
-.mov10 {
-  display: none;
+.dotbox {
+  display: flex;
+  gap: 14px;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+  margin: 12px 0;
+}
+.dotbox li {
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  border: none;
+  background-color: rgba(0, 0, 0, 0.42);
+  transition: 100ms linear;
+}
+.dotbox li:hover {
+  background-color: rgba(0, 0, 0, 0.52);
+}
+.dotbox li:active {
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
 /* content scroll */
 .a-contents-container {
   width: 100%;
-  overflow: scroll;
+  overflow-x: scroll;
 }
 .a-contents {
   display: flex;
@@ -734,6 +763,7 @@ header > button + button + button {
   .a-movie__text .genre {
     width: 401px;
   }
+
   /* content scroll */
   .a-contents {
     width: 2098px;
@@ -987,13 +1017,16 @@ header > button + button + button {
   .a-movie {
     width: 274px;
     height: 495px;
-    margin-bottom: 50px;
   }
   .a-movie__img {
     aspect-ratio: 274/495;
   }
   .a-movie__text {
     display: none;
+  }
+  .dotbox {
+    margin-top: 16px;
+    margin-bottom: 26px;
   }
 
   /* content scroll */
