--- a/applemain.css
+++ b/applemain.css
@@ -2,16 +2,15 @@ body {
   margin: 0;
   font-family: "Inter";
 }
-
 /* header */
-.header-container {
+header {
   background-color: rgba(245, 245, 247, 0.8);
-  width: 1920px;
+  max-width: 1920px;
   margin: 0 auto;
   display: flex;
+  gap: 24px;
   align-items: center;
   justify-content: center;
-  gap: 24px;
 }
 .header-logo {
   width: 30px;
@@ -19,47 +18,157 @@ body {
   background-image: url(images/header-logo.png);
   background-size: cover;
 }
-.nav-menu {
+.header-nav {
   display: flex;
   gap: 24px;
 }
-.nav-menu__item {
+.header-nav__item {
   font-size: 12px;
   line-height: 60px;
   letter-spacing: -0.28px;
-  color: rgba(0, 0, 0, 1);
   text-decoration: none;
+  color: rgba(0, 0, 0, 0.8);
 }
-.header-buttons {
-  display: flex;
-  gap: 24px;
+.header-nav__item:hover {
+  color: rgba(0, 0, 0, 1);
 }
 .header-button {
   width: 30px;
   height: 44px;
+  background-size: cover;
   border: none;
   background-color: transparent;
-  background-size: cover;
 }
-.header-buttons .search {
+.header-button--search {
   background-image: url(images/header-search.png);
 }
-.header-buttons .bag {
+.header-button--bag {
   background-image: url(images/header-bag.png);
 }
-.header-buttons .more {
+.header-button--more {
   background-image: url(images/header-more.png);
-  display: none;
 }
-
-@media (max-width: 768px) {
-  .nav-menu {
-    display: none;
-  }
-  .header-buttons .more {
-    display: block;
-  }
+/* banner */
+.banner {
+  background-color: rgba(255, 255, 255, 1);
+  max-width: 1920px;
+  margin: 16px auto;
 }
-
-@media (max-width: 390px) {
+.banner__text {
+  text-align: center;
+  font-size: 14px;
+  line-height: 20px;
+  color: rgba(29, 29, 31, 1);
+}
+/* iPhone 16 Pro */
+.iphone16pro-container {
+  background-image: url(images/iphone16pro.png);
+  height: 692px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  max-width: 1920px;
+  margin: 0 auto;
+  margin-bottom: 12px;
+}
+.iphone16pro {
+  text-align: center;
+  padding-top: 55px;
+  box-sizing: border-box;
+}
+.iphone16pro__title {
+  font-size: 52px;
+  line-height: 60px;
+  letter-spacing: -0.28px;
+  color: rgba(245, 245, 247, 1);
+  font-weight: 600;
+}
+.iphone16pro__subtitle {
+  font-size: 24px;
+  line-height: 32px;
+  color: rgba(245, 245, 247, 1);
+  margin-top: 16px;
+  margin-bottom: 20px;
+}
+.iphone16pro__buttons {
+  display: flex;
+  gap: 16px;
+  justify-content: center;
+  align-items: center;
+}
+.iphone16pro__button {
+  font-size: 16px;
+  line-height: 20px;
+  letter-spacing: -0.37px;
+  color: rgba(255, 255, 255, 1);
+  padding: 12px 20px;
+  background-color: rgba(0, 113, 227, 1);
+  border-radius: 22px;
+  border: none;
+}
+.iphone16pro__button:hover {
+  background-color: rgb(0 119 237);
+}
+.iphone16pro__button--bluebordtrans {
+  background-color: transparent;
+  border: 1px solid rgba(41, 151, 255, 1);
+  color: rgba(41, 151, 255, 1);
+}
+.iphone16pro__button--bluebordtrans:hover {
+  color: rgba(255, 255, 255, 1);
+  border-color: transparent;
+}
+/* iPhone 16 */
+.iphone16-container {
+  background-image: url(images/iphone16.png);
+  height: 692px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  max-width: 1920px;
+  margin: 0 auto;
+}
+.iphone16 {
+  text-align: center;
+  padding-top: 55px;
+  box-sizing: border-box;
+}
+.iphone16__title {
+  font-size: 52px;
+  line-height: 60px;
+  letter-spacing: -0.28px;
+  color: rgba(245, 245, 247, 1);
+}
+.iphone16__subtitle {
+  font-size: 24px;
+  line-height: 32px;
+  color: rgba(245, 245, 247, 1);
+  margin-top: 16px;
+  margin-bottom: 20px;
+}
+.iphone16__buttons {
+  display: flex;
+  gap: 16px;
+  justify-content: center;
+  align-items: center;
+}
+.iphone16__button {
+  font-size: 16px;
+  line-height: 20px;
+  letter-spacing: -0.37px;
+  color: rgba(0, 0, 0, 1);
+  background-color: rgba(255, 255, 255, 1);
+  border-radius: 22px;
+  border: 1px solid rgba(255, 255, 255, 1);
+  padding: 12px 20px;
+}
+.iphone16__button:hover {
+  background-color: rgb(245 245 247);
+}
+.iphone16__button--trans {
+  background-color: transparent;
+  color: rgba(255, 255, 255, 1);
+}
+.iphone16__button--trans:hover {
+  color: rgba(0, 0, 0, 1);
 }
