--- a/applemain.css
+++ b/applemain.css
@@ -393,7 +393,7 @@ header {
 .tv-slides {
   width: 6314px;
   display: flex;
-  gap: 16px;
+  column-gap: 16px;
 }
 .tv-slide {
   width: 1250px;
@@ -441,22 +441,91 @@ header {
 .tv-slide-text__info span {
   font-weight: 700;
 }
-.tv-scroller .dot-box {
+.tv-dot-box {
   display: flex;
   gap: 14px;
   justify-content: center;
   margin: 12px auto;
 }
-.tv-scroller .dot {
+.tv-dot-box .dot {
   width: 8px;
   height: 8px;
   border-radius: 50%;
   background-color: rgba(0, 0, 0, 0.42);
   transition: 100ms linear;
 }
-.tv-scroller .dot:hover {
+.tv-dot-box .dot:hover {
   background-color: rgba(0, 0, 0, 0.54);
 }
-.tv-scroller .dot:active {
+.tv-dot-box .dot:active {
   background-color: rgba(0, 0, 0, 0.8);
+}
+/* apple content scroll */
+.content-scroller {
+  max-width: 1920px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin: 0 auto;
+}
+.content-slides-container {
+  width: 100%;
+  overflow-x: scroll;
+}
+.content-slides {
+  width: 3015px;
+  display: flex;
+  gap: 16px;
+}
+.content-slide {
+  width: 417px;
+  height: 236px;
+  position: relative;
+}
+.content-slide__img {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  aspect-ratio: 417/236;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+.content-slide__title {
+  position: absolute;
+  font-size: 14px;
+  line-height: 18px;
+  letter-spacing: -0.22px;
+  font-weight: 600;
+  color: rgba(255, 255, 255, 1);
+  bottom: 20px;
+  left: 15px;
+}
+.content-slide__title--randb {
+  top: 109px;
+  left: 226px;
+}
+.content-button {
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  border: none;
+  background-color: rgba(210, 210, 215, 1);
+  margin: 16px;
+  display: flex;
+  position: relative;
+}
+.content-button::after {
+  content: "";
+  display: inline-block;
+  width: 12px;
+  height: 12px;
+  background-image: url(images/cont-button-icon.png);
+  background-repeat: no-repeat;
+  background-size: auto;
+  position: absolute;
+  top: 50%;
+  left: 6px;
 }
