--- a/apple-store.css
+++ b/apple-store.css
@@ -150,3 +150,50 @@ header {
   text-decoration: underline;
   text-decoration-style: solid;
 }
+
+/* product categories new */
+.product-categories-container {
+  background-color: rgba(245, 245, 247, 1);
+  max-width: 1920px;
+  margin: 0 auto;
+}
+.product-categories {
+  padding-left: 140px;
+  display: flex;
+  gap: 12px;
+}
+.category {
+  width: 136px;
+  height: 146px;
+  padding: 16px 8px;
+  box-sizing: border-box;
+  text-align: center;
+}
+.category__imgbox {
+  width: 120px;
+  height: 78px;
+  position: relative;
+}
+.category-img {
+  aspect-ratio: 120/78;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+.categoty__title {
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 700;
+  color: rgba(29, 29, 31, 1);
+  margin-top: 16px;
+}
+.categoty__title:hover {
+  text-decoration: underline;
+}
+
+/* latest products */
