--- a/apple-store.css
+++ b/apple-store.css
@@ -156,9 +156,10 @@ header {
   background-color: rgba(245, 245, 247, 1);
   max-width: 1920px;
   margin: 0 auto;
+  padding-left: 140px;
+  box-sizing: border-box;
 }
 .product-categories {
-  padding-left: 140px;
   display: flex;
   gap: 12px;
 }
@@ -195,5 +196,106 @@ header {
 .categoty__title:hover {
   text-decoration: underline;
 }
-
-/* latest products */
+/* Latest */
+.latest-container {
+  background-color: rgba(245, 245, 247, 1);
+  max-width: 1920px;
+  margin: 0 auto;
+  padding: 60px 0;
+  padding-left: 140px;
+  box-sizing: border-box;
+}
+.latest-heads {
+  display: flex;
+  gap: 4px;
+  margin-bottom: 24px;
+}
+.latest-head {
+  font-size: 24px;
+  line-height: 32px;
+  font-weight: 700;
+}
+.latest-head--heading {
+  background: linear-gradient(
+    49deg,
+    rgba(0, 144, 247, 1),
+    rgba(186, 98, 252, 1),
+    rgba(242, 65, 107, 1)
+  );
+  background-clip: text;
+  color: transparent;
+  display: inline-block;
+}
+.latest-head--subheading {
+  color: rgba(110, 110, 115, 1);
+}
+.latest-scroller {
+  width: 100%;
+  overflow-x: scroll;
+}
+.latest-cards {
+  width: 2980px;
+  display: flex;
+  gap: 20px;
+}
+.latest-card {
+  width: 480px;
+  height: 500px;
+  position: relative;
+  border-radius: 18px;
+  box-shadow: 2px 4px 12px rgba(0, 0, 0, 0.08);
+  box-sizing: border-box;
+}
+.latest-card__img {
+  aspect-ratio: 480/500;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 18px;
+}
+.latest-card-text {
+  position: absolute;
+  top: 30px;
+  left: 30px;
+}
+.latest-card__addinfo {
+  font-size: 12px;
+  line-height: 16px;
+  font-weight: 700;
+  color: rgba(182, 68, 0, 1);
+}
+.latest-card__addinfo--watchseries10,
+.latest-card__addinfo--watchultra2 {
+  color: transparent;
+}
+.latest-card__name {
+  font-size: 26px;
+  line-height: 32px;
+  letter-spacing: 0.2px;
+  font-weight: 700;
+  color: rgba(29, 29, 31, 1);
+  margin-top: 9px;
+  margin-bottom: 12px;
+}
+.latest-card__price {
+  font-size: 18px;
+  line-height: 20px;
+  color: rgba(29, 29, 31, 1);
+}
+.latest-card__name--watchultra2,
+.latest-card__slogan--watchultra2,
+.latest-card__price--watchultra2 {
+  color: rgb(255 255 255);
+}
+.latest-card__slogan {
+  font-size: 20px;
+  line-height: 24px;
+  font-weight: 600;
+  margin-bottom: 9px;
+}
+/* Personalization */
