only at apple start

--- a/apple-store.css
+++ b/apple-store.css
@@ -430,3 +430,8 @@ header {
   line-height: 18px;
   color: rgba(29, 29, 31, 1);
 }
+/* Holiday Picks */
+
+/* Only at Apple */
+
+/* Special Savings */
