apple exp ended

--- a/apple-store.css
+++ b/apple-store.css
@@ -442,6 +442,7 @@ header {
 .holiday-heads {
   display: flex;
   gap: 4px;
+  margin-bottom: 24px;
 }
 .holiday-head {
   font-size: 24px;
@@ -685,4 +686,97 @@ header {
 }
 
 /* Apple Experience */
+.appexp-container {
+  max-width: 1920px;
+  background-color: rgba(245, 245, 247, 1);
+  margin: 0 auto;
+  padding: 60px 0;
+  padding-left: 140px;
+  box-sizing: border-box;
+}
+.appexp-heads {
+  display: flex;
+  gap: 4px;
+  margin-bottom: 24px;
+}
+.appexp-head {
+  font-size: 24px;
+  line-height: 32px;
+  font-weight: 700;
+}
+.appexp-head--heading {
+  background: linear-gradient(
+    49deg,
+    rgba(0, 144, 247, 1),
+    rgba(186, 98, 252, 1),
+    rgba(242, 65, 107, 1)
+  );
+  background-clip: text;
+  color: transparent;
+  display: inline-block;
+}
+.appexp-head--subheading {
+  color: rgba(110, 110, 115, 1);
+}
+.appexp-cards {
+  width: 100%;
+  display: flex;
+  gap: 20px;
+  overflow-x: scroll;
+  overflow-y: hidden;
+}
+.appexp-card {
+  width: 480px;
+  height: 500px;
+  border-radius: 18px;
+  position: relative;
+  flex-shrink: 0;
+  box-shadow: 2px 4px 12px rgba(0, 0, 0, 0.08);
+  box-sizing: border-box;
+}
+.appexp-card__img {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  aspect-ratio: 48/50;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  border-radius: 18px;
+}
+.appexp-card-text {
+  position: absolute;
+  top: 32px;
+  left: 30px;
+}
+.appexp-card__product-title {
+  font-size: 12px;
+  line-height: 16px;
+  font-weight: 700;
+  color: rgba(110, 110, 115, 1);
+}
+.appexp-card--free-tv .appexp-card__product-title {
+  color: rgba(245, 245, 247, 1);
+}
+.appexp-card__promo-title {
+  font-size: 26px;
+  line-height: 32px;
+  font-weight: 700;
+  color: rgba(29, 29, 31, 1);
+  margin-top: 8px;
+  margin-bottom: 10px;
+}
+.appexp-card--free-tv .appexp-card__promo-title {
+  color: rgba(255, 255, 255, 1);
+}
+.appexp-card--subscription .appexp-card-text {
+  top: 52px;
+}
+.appexp-card__description {
+  font-size: 17px;
+  line-height: 20px;
+  color: rgba(29, 29, 31, 1);
+}
 /* Special Savings */
