--- a/apple-store.css
+++ b/apple-store.css
@@ -779,4 +779,135 @@ header {
   line-height: 20px;
   color: rgba(29, 29, 31, 1);
 }
+
 /* Special Savings */
+.savings-container {
+  background-color: rgba(245, 245, 247, 1);
+  max-width: 1920px;
+  margin: 0 auto;
+  padding-left: 140px;
+  background-position: center;
+  box-sizing: border-box;
+}
+.savings-heads {
+  display: flex;
+  gap: 4px;
+  margin-bottom: 24px;
+}
+.savings-head {
+  font-size: 24px;
+  line-height: 32px;
+  font-weight: 700;
+}
+.savings-head--heading {
+  background: linear-gradient(
+    49deg,
+    rgba(0, 144, 247, 1),
+    rgba(186, 98, 252, 1),
+    rgba(242, 65, 107, 1)
+  );
+  background-clip: text;
+  color: transparent;
+  display: inline-block;
+}
+.savings-head--subheading {
+  color: rgba(110, 110, 115, 1);
+}
+.savings-cards {
+  display: flex;
+  gap: 20px;
+  overflow-x: scroll;
+}
+.savings-card {
+  width: 400px;
+  height: 500px;
+  border-radius: 18px;
+  box-shadow: 2px 4px 12px rgba(0, 0, 0, 0.08);
+  position: relative;
+  flex-shrink: 0;
+}
+.savings-card__img {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  aspect-ratio: 4/5;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  border-radius: 18px;
+}
+.savings-card-text {
+  position: absolute;
+  top: 32px;
+  left: 30px;
+}
+.savings-card__product-title {
+  font-size: 12px;
+  line-height: 16px;
+  font-weight: 700;
+  color: rgba(110, 110, 115, 1);
+}
+.savings-card--business .savings-card__product-title {
+  color: rgba(134, 134, 139, 1);
+}
+.savings-card--business .savings-card__promo-title {
+  color: rgba(255, 255, 255, 1);
+}
+.savings-card__promo-title {
+  font-size: 26px;
+  line-height: 32px;
+  font-weight: 700;
+  color: rgba(29, 29, 31, 1);
+  margin-top: 7px;
+  margin-bottom: 8px;
+}
+.savings-card__description {
+  font-size: 17px;
+  line-height: 20px;
+  color: rgba(29, 29, 31, 1);
+}
+
+/* Quick Links */
+.connection-container {
+  background-color: rgba(245, 245, 247, 1);
+  max-width: 1920px;
+  margin: 0 auto;
+  padding-top: 60px;
+  padding-bottom: 100px;
+  padding-left: 140px;
+  box-sizing: border-box;
+}
+.connection-title {
+  font-size: 26px;
+  line-height: 32px;
+  font-weight: 700;
+  color: rgba(29, 29, 31, 1);
+  margin-bottom: 24px;
+}
+.connection-links {
+  display: flex;
+  gap: 12px;
+}
+.connection-link {
+  font-size: 14px;
+  line-height: 20px;
+  padding: 10px 12px;
+  color: rgba(29, 29, 31, 1);
+  border: 1px solid rgba(29, 29, 31, 1);
+  background-color: rgba(245, 245, 247, 1);
+  border-radius: 20px;
+  display: flex;
+  gap: 8px;
+}
+.connection-link::after {
+  width: 8px;
+  height: 8px;
+  content: "";
+  background-image: url(image-store/link-vector.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: initial;
+  display: inline-block;
+}
